--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
-<body>
+<body style="background-color:rgb(239, 239, 239)">
+  
   <app-root></app-root>
+
 </body>
 </html>
